--- a/ChatClient/App.config
+++ b/ChatClient/App.config
@@ -1,24 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IServiceChat">
                     <security>
-                        <transport sslProtocols="None" />
+                        <transport sslProtocols="None"/>
                     </security>
                 </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceChat.IServiceChat"
-                name="NetTcpBinding_IServiceChat">
+            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceChat.IServiceChat" name="NetTcpBinding_IServiceChat">
                 <identity>
-                    <userPrincipalName value="DESKTOP-SN1CSC4\Chamomilla" />
+                    <userPrincipalName value="DESKTOP-SN1CSC4\Chamomilla"/>
                 </identity>
             </endpoint>
         </client>
