--- a/WCF_Chat/app.config
+++ b/WCF_Chat/app.config
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
                 <behavior name="">
-                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-                    <serviceDebug includeExceptionDetailInFaults="false" />
+                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+                    <serviceDebug includeExceptionDetailInFaults="false"/>
                 </behavior>
             </serviceBehaviors>
         </behaviors>
@@ -13,16 +13,16 @@
             <service name="WCF_Chat.ServiceChat">
                 <endpoint address="" binding="basicHttpBinding" contract="WCF_Chat.IServiceChat">
                     <identity>
-                        <dns value="localhost" />
+                        <dns value="localhost"/>
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/WCF_Chat/ServiceChat/" />
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/WCF_Chat/ServiceChat/"/>
                     </baseAddresses>
                 </host>
             </service>
         </services>
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
